<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/search_icon"
        android:id="@+id/search"
        app:showAsAction="always" />
    <item
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/search_icon"
        android:id="@+id/add"
        app:showAsAction="always" />
    <item
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/info_icon"
        app:showAsAction="always"
        android:id="@+id/info"/>
    <item
        android:icon="@drawable/ic_exit_to_app_white_48dp"
        android:title="@string/logout_icon"
        app:showAsAction="always"
        android:id="@+id/logout"/>
</menu>