<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.orangecoastcollege.cs273.dtallcott.connect.StudyGroupDetails">

    <fragment
        android:id="@+id/studyGroupDetailsMapFragment"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/detailsTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/studyGroupDetailsMapFragment"
        android:layout_centerHorizontal="true"
        android:textSize="40sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"
        android:layout_marginTop="20dp"
        android:text="@string/study_group_name"/>

    <TextView
        android:id="@+id/detailsCourseTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/detailsTitleTextView"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="20dp"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/study_group_course"/>

    <TextView
        android:id="@+id/detailsDateTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/detailsCourseTextView"
        android:layout_marginRight="100dp"
        android:layout_alignParentRight="true"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/study_group_date"/>

    <TextView
        android:id="@+id/detailsLocationTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/detailsCourseTextView"
        android:layout_alignStart="@+id/detailsCourseTextView"
        android:layout_below="@+id/detailsCourseTextView"
        android:layout_marginTop="20dp"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/study_group_location"/>

    <TextView
        android:id="@+id/detailsTimeextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/detailsLocationTextView"
        android:layout_alignEnd="@+id/detailsDateTextView"
        android:layout_alignRight="@+id/detailsDateTextView"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/study_group_time"/>

    <TextView
        android:id="@+id/detailsDescriptionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/detailsLocationTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="100dp"
        android:layout_marginRight="100dp"
        android:layout_marginTop="20dp"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/study_group_description"/>

    <Button
        android:id="@+id/joinStudyGroupButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textSize="40sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"
        android:background="@color/colorAccent"
        android:layout_marginBottom="40dp"
        android:text="@string/study_group_join_button"/>

    <ListView
        android:id="@+id/detailsStudentsListView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/detailsDescriptionTextView"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:layout_above="@+id/joinStudyGroupButton"
        android:layout_alignLeft="@+id/detailsLocationTextView"
        android:layout_alignStart="@+id/detailsLocationTextView"
        android:layout_alignRight="@+id/detailsTimeextView"
        android:layout_alignEnd="@+id/detailsTimeextView"/>
</RelativeLayout>
