<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <android.support.v7.widget.CardView
            android:id="@+id/searchCardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:visibility="gone"
            card_view:cardCornerRadius="4dp"
            card_view:cardElevation="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/searchImageView"
                    android:layout_width="match_parent"
                    android:layout_height="160dp"
                    android:background="@color/colorPrimary"
                    app:srcCompat="@drawable/ic_search_white_48dp"
                    tools:layout_editor_absoluteX="8dp"
                    tools:layout_editor_absoluteY="-3dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:orientation="vertical"
                    android:padding="20dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="10dp"
                        android:text="@string/search_cardview_text"
                        android:textAppearance="?android:attr/textAppearanceLarge"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/search_description"
                        android:textStyle="italic"/>
                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/studyGroupCardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:visibility="gone"
            card_view:cardCornerRadius="4dp"
            card_view:cardElevation="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/studyGroupImageView"
                    android:layout_width="match_parent"
                    android:layout_height="160dp"
                    android:background="@color/colorPrimary"
                    app:srcCompat="@drawable/ic_add_white_48dp"
                    tools:layout_editor_absoluteX="8dp"
                    tools:layout_editor_absoluteY="-3dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:orientation="vertical"
                    android:padding="20dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="10dp"
                        android:text="@string/create_study_group_cardview_text"
                        android:textAppearance="?android:attr/textAppearanceLarge"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/create_study_group_description"
                        android:textStyle="italic"/>
                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/profileCardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:visibility="gone"
            card_view:cardCornerRadius="4dp"
            card_view:cardElevation="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorPrimary"
                android:orientation="vertical">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/profileImageView"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="5dp"
                    android:src="@mipmap/ic_launcher_round"
                    android:transitionName="@string/transition_name_avatar"
                    tools:layout_editor_absoluteX="8dp"
                    tools:layout_editor_absoluteY="-3dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/white"
                    android:gravity="center_vertical"
                    android:orientation="vertical"
                    android:padding="20dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="10dp"
                        android:text="@string/profile_cardview_text"
                        android:textAppearance="?android:attr/textAppearanceLarge"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/profile_description"
                        android:textStyle="italic"/>
                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/infoCardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:visibility="gone"
            card_view:cardCornerRadius="4dp"
            card_view:cardElevation="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/infoImageView"
                    android:layout_width="match_parent"
                    android:layout_height="160dp"
                    android:background="@color/colorPrimary"
                    app:srcCompat="@drawable/ic_info_outline_white_48dp"
                    tools:layout_editor_absoluteX="8dp"
                    tools:layout_editor_absoluteY="-3dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:orientation="vertical"
                    android:padding="20dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="10dp"
                        android:text="@string/info_page_cardview_text"
                        android:textAppearance="?android:attr/textAppearanceLarge"/>

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/about_description"
                        android:textStyle="italic"/>
                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>
</ScrollView>